fix twitter demo (keep alive required) and discard read bytes to prevent exessive memory usage in HTTP streams